# thermal-chamber-safety-controller

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
config/: default_config.json  high_temp_config.json  slow_response_config.json
scenarios/: default_scenario.json
src/: main.cpp
src/app/: Application.cpp  Application.hpp
src/config/: ConfigManager.cpp  ConfigManager.hpp
src/core/: ChamberModel.cpp  ChamberModel.hpp  Controller.cpp  Controller.hpp  FaultManager.cpp  FaultManager.hpp  SafetyManager.cpp  SafetyManager.hpp  StateMachine.cpp  StateMachine.hpp  Types.hpp
src/diagnostics/: ConsoleLogger.cpp  ConsoleLogger.hpp
src/io/: ActuatorModel.cpp  ActuatorModel.hpp  SensorSimulator.cpp  SensorSimulator.hpp
src/scenarios/: ScenarioRunner.cpp  ScenarioRunner.hpp
tests/: CMakeLists.txt  test_config_manager.cpp  test_controller.cpp  test_fault_manager.cpp  test_integration_scenarios.cpp  test_safety_manager.cpp  test_scenario_runner.cpp  test_state_machine.cpp
